Fix check mark not being visible

--- a/packages/graphiql/css/app.css
+++ b/packages/graphiql/css/app.css
@@ -370,7 +370,6 @@
   max-width: 300px;
   overflow: hidden;
   padding: 2px 20px 4px 11px;
-  text-overflow: ellipsis;
   white-space: nowrap;
 }
 
